[MM-39287] - Fix alignment of clear button in message deleted indicator

--- a/sass/components/_post.scss
+++ b/sass/components/_post.scss
@@ -1440,17 +1440,14 @@
 
         position: relative;
         right: -10px;
-        display: inline-block;
-        width: 20px;
-        height: 20px;
+        width: 16px;
+        height: 16px;
         color: inherit;
-        float: right;
         font-family: 'Open Sans', sans-serif;
         font-size: 20px;
         font-weight: 600;
-        line-height: 20px;
+        line-height: 16px;
         text-decoration: none;
-        vertical-align: top;
         visibility: hidden;
 
         &:hover {
